# charmaine-cat-studio

./: .gitignore  README.md
apps/api/: Cargo.toml
apps/api/sql/: admin_order_management.sql
apps/api/src/: main.rs
apps/api/src/metrics/: middleware.rs  mod.rs  registry.rs
apps/api/src/tracing/: middleware.rs  mod.rs  trace.rs
apps/storefront/: package-lock.json  package.json
apps/storefront/src/: App.css  App.tsx  main.tsx
apps/storefront/src/context/: CartContext.tsx
migrations/: 0001_initial_schema.sql  0002_orders_created_at_index.sql
